Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-542

Missing XATTR changelog record

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.2.0, Lustre 2.1.2
    • Lustre 2.0.0, Lustre 2.1.0
    • None
    • 3
    • 4839

      Creating or modifying an xattr generate a XATTR record in MDT changelog,
      but removing an xattr doesn't. I think it's a lack, since removing an xattr is an xattr change too.

            bobijam Zhenyu Xu
            leibovici-cea Thomas LEIBOVICI - CEA (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: